# paperpile

./: .gitignore  Changes  Makefile.PL  README  ideas.org  paperpile.conf  scratch.org
c/: .gitignore  info.txt
c/extpdf/: .gitignore  configure.ac  poppler_patch
c/extpdf/src/: Makefile.am  annotation.cc  annotation.h  extpdf.cc  extpdf.cpp  extpdf.h  test.txt  viewer.cc  viewer.h
c/extpdf/test/: annotation_sticky.xml  highlight.xml  info.xml  render.xml  render_stdout.xml
c/pdf/: .gitignore  annotate.cpp
c/pdf2xml/: INSTALL  Makefile  Makefile.linux  Makefile.osx  environment.rc  make.bat
c/pdf2xml/exe/: .gitignore
c/pdf2xml/src/: AnnotsXrce.cc  AnnotsXrce.h  ConstantsUtils.cc  ConstantsXML.cc  ConstantsXML.h  PDFDocXrce.cc  Parameters.cc  Parameters.h  XmlOutputDev.cc  XmlOutputDev.h  pdftoxml.cc  pdftoxml_old.cc
c/pdf2xml/xpdf-3.02/: .gitignore  aconf.h  config.status
c/qruntime/: .gitignore  Info.plist  postlink.sh  qruntime.pro
c/qruntime/resources/: index.html  runtime.js  style.css
c/qruntime/src/: main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h  runtime.cpp  runtime.h  runtimepage.cpp  runtimepage.h  runtimeview.cpp  runtimeview.h  src.pro
c/qruntime/src/qruntime/: CMakeLists.txt  main.cpp  network.cpp  network.h  pdf.h  runtime.cpp  runtimeview.h
c/shash/: Makefile  README  lookup3.c  simi.h
c/src/: CMakeLists.txt
c/src/extpdf/: CMakeLists.txt  extpdf.cpp  extpdf.h  main.cpp  pdf.cpp
c/src/qruntime/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h  runtime.cpp  runtime.h  runtimepage.h
c/src/shash/: CMakeLists.txt  shash.c  simi.c  simiw.c  simiw.h
c/yumpdf/: .gitignore  configure.ac  link_osx.sh
c/yumpdf/src/: Makefile.am  annotation.cc  annotation.h  viewer.cc  viewer.h  yumpdf.cc  yumpdf.h
c/yumpdf/test/: annotation_delete.xml  annotation_highlight.xml  annotation_sticky.xml  get_annotations.xml  render.xml  search.xml  text.xml  wordlist.xml
catalyst/: Makefile.PL  lighttpd.conf  paperpile.conf  paperpile.yaml
catalyst/c/extpdf/: autogen.sh  configure.ac
catalyst/c/pdf/: Makefile
catalyst/conf/: fields.yaml  resources.yaml  settings.yaml  update.yaml
catalyst/data/: citations-data.xml  citations-rules.xml  journals.list  meta-crawler.xml  pdf-crawler.xml  resources.yaml
catalyst/data/csl/: citeproc-js.js  sys.js
catalyst/db/: app.db  app.sql  library.db  library.sql  queue.db  queue.sql  user.db  user.sql
catalyst/lib/: PaperPile.pm  Paperpile.pm
catalyst/lib/PaperPile/: Crawler.pm  PDFextract.pm  PDFviewer.pm  Utils.pm
catalyst/lib/Paperpile/: App.pm  Build.pm  CSL.pm  Crawler.pm  Exceptions.pm  FileSync.pm  Formats.pm  Job.pm  MetaCrawler.pm  Migrate.pm  PDFextract.pm  PdfCrawler.pm  PdfExtract.pm  PdfReferenceExtract.pm  PdfUserAgent.pm  Queue.pm  Server.pm  Utils.pm
catalyst/perl/CLS/: README
catalyst/perl/CSL/: META.yml  Makefile.PL
catalyst/root/: beautify_all.pl  css.html  empty.mas  index.html  index.mas  main.mas  patterns.mas  runtime.html  scratch.mas  scratch2.mas  test.css
catalyst/root/admin/: autohandler  import_journals.mas  list.mas
catalyst/root/csl/: chicago-author-date.csl  ieee.csl  nature.csl
catalyst/root/css/: asdf.css  large-fonts.css  normal-fonts.css  paperpile-ext4.css  paperpile-grid.css  paperpile-overview.css  paperpile.css  pdf.css  x-large-fonts.css
catalyst/root/ext/: ext-all-debug.js
catalyst/root/ext4/: ext-all-debug.js
catalyst/root/js/: data-tabs.js  forms.js  paperpile.js  pdf-manager.js  pdf-viewer.js  pub-summary.js  pub-view.js  results-grid.js  results-tabs.js  scratch.js  scratch2.js  settings.js  tabs.js  tree.js
catalyst/script/: log  osx_server.pl  paperpile_cgi.pl  paperpile_create.pl  paperpile_fastcgi.pl  paperpile_fcgi.pl  paperpile_server.pl  paperpile_test.pl  px_to_em.pl  server.pl  start_linux32.sh  start_linux64.sh  start_osx.sh  start_win32.sh  updater.pl  win32_server.pl
catalyst/t/: 01app.t  Job.t  PDFextract.t  Utils.t  controller_Ajax.t  library_Author.t  library_Publication.t  library_source_PubMed.t  patch.pl  tree.t  view_JSON.t  view_Mason.t
catalyst/test/: run.pl  runtests
data/: jabref.txt
db/: schema.sql
lib/: PaperPile.pm
lib/PaperPile/: Crawler.pm  Library.pm  PDFviewer.pm  Schema.pm  Utils.pm
lighttpd/: INFO  lighttpd.conf
lighttpd/sbin/: lighttpd  lighttpd-angel
perl/BibTexParser/: Changes  MANIFEST  META.yml  Makefile  Makefile.PL  Makefile.old  README  dist.ini  notes
perl/Bibutils/: Bibutils.xs  Changes  MANIFEST  META.yml  Makefile.PL  README  const-c.inc  latex.c.patch  testscript.pl  typemap
perl/CSL/: MANIFEST
perl/CSL/t/: 1.mod  (+9 more)
plack/conf/: fields.yaml  resources.yaml
plack/db/: app.db  app.sql  library.db
plack/lib/: Paperpile.pm
plack/root/: index.html  runtime.html
plack/script/: server.pl  start_linux32.sh  start_linux64.sh  start_osx.sh  updater.pl  worker.pl
plack/test/: .gitignore  runtests
plugins/word/: Paperpile plugin.docm
qt/linux32/: README  catalyst  paperpile
qt/linux64/: paperpile  plack
qt/win32/: .gitignore
root/: ext  main.mas  scratch.mas
root/admin/: insert.mas
root/css/: boxselect.css  paperpile.css
root/js/: box-select.js  data-tabs.js  filter-field.js  paperpile.js  pdf-manager.js  pdf-viewer.js  pub-edit.js  pub-notes.js  pub-summary.js  results-grid.js  results-tab.js  results-tabs.js  scratch.js  search-field.js  semantic.cache  test.js  tree.js
root/test/: grid.mas  main.mas  semantic.cache
script/user/: initdb.pl  start_fastcgi.sh
t/: 01app.t  Crawler.t  PDFViewer.t  Utils.t  controller_Admin.t  controller_Insert.t  controller_List.t  controller_Test.t  library_Author.t  library_Publication.t  library_source.t  library_source_DB.t  library_source_File.t  library_source_PubMed.t  model_DB.t  model_DBI.t  model_DB_fulltext.t
t/Crawler/: Crawler.t
t/data/: driver.xml  test.bib  test1.ris  test2.ris
titanium/linux32/: manifest  paperpile  start_server.sh  tiapp.xml
titanium/linux64/: .gitignore  Resources  catalyst  manifest  paperpile  start_server.sh  stop_server.sh  tiapp.xml
(+4081 files in other folders)
